--- a/sass/components/_backdrop.scss
+++ b/sass/components/_backdrop.scss
@@ -96,12 +96,12 @@
 @media screen and (min-width: 768px) {
   .backdrop__content {
     width: 450px;
+    height: 630px;
   }
 }
 @media screen and (min-width: 1200px) {
   .backdrop__content {
     width: 528px;
     height: 581px;
-    overflow: unset;
   }
 }
